# ghostctl

./: .gitignore  ARCH_TROUBLESHOOTING.md  AUGUST_WEEKEND_TODO.md  AUR_PKG_FIXES.md  CHANGELOG.md  CHANGELONG.md  COMMANDS.md  CONTRIBUTING.md  DOCKER.md  DOCS.md  GHOST_INTEGRATIONS.md  INSTALL.md  INTEGRATION_ASSESSMENT.md  Makefile  PERMISION.md  PKGBUILD  PROXMOX.md  README.md  REBOOT_ERRORS_CONT.md  SECURITY.md  TODO.md  UNUSED_FUNCTIONS.md  V1.0.0_FEATURES.md  commands.md  demo_working_features.py  docs.md  go.mod  install.sh  main.go  pve_v9.md  test_minio.sh  v0.7.0_ROADMAP.md
ghostctl/: Cargo.toml  main.go
ghostctl/cmd/: root.go
ghostctl/src/: arch.rs  btrfs.rs  cli.rs  command.rs  commands.rs  config.rs  dev.rs  devops.rs  http_client.rs  logging.rs  main.rs  menu.rs  nvidia.rs  nvim.rs  progress.rs  pve.rs  release.rs  restic.rs  restore.rs  scripts.rs  shell.rs  support.rs  systemd.rs  tui.rs  utils.rs
ghostctl/src/ai/: config.rs  hermes.rs  mod.rs  ollama.rs  tune.rs
ghostctl/src/arch/: archfix.rs  aur.rs  aur_cache.rs  boot.rs  diagnostics.rs  dotfiles.rs  errors.rs  hardware.rs  health.rs  mirror.rs  mod.rs  perf.rs  pkgfix.rs  progress.rs  recovery.rs  services.rs  swap.rs  sysadmin.rs
ghostctl/src/audit/: ci.rs  config.rs  deps.rs  ioc.rs  lockfile.rs  mod.rs  osv.rs  scan.rs  tracker.rs  vuln.rs
ghostctl/src/backup/: chroot.rs  cleanup.rs  mod.rs  restore.rs  schedule.rs  scheduler.rs  setup.rs  verify.rs
ghostctl/src/bluetooth/: mod.rs  tui.rs
ghostctl/src/btrfs/: mod.rs  recovery.rs  restore.rs  snapshot.rs  snapshot_enhanced.rs  snapshots.rs
ghostctl/src/cloud/: aws.rs  azure.rs  gcp.rs  mod.rs
ghostctl/src/crowdsec/: config.rs  mod.rs
ghostctl/src/dev/: bootstrap.rs  go.rs  gtools.rs  js.rs  lsp.rs  mod.rs  python.rs  rust.rs  zig.rs
ghostctl/src/docker/: cleanup.rs  compose.rs  container.rs  devops.rs  mod.rs  registry.rs  security.rs
ghostctl/src/gaming/: environment.rs  errors.rs  graphics.rs  lutris.rs  management.rs  mod.rs  monitoring.rs  performance.rs  platforms.rs  proton.rs  setup.rs  steam.rs  wine_prefix.rs  wine_tools.rs
ghostctl/src/gitlab/: config.rs  mod.rs
ghostctl/src/iommu/: acs.rs  analysis.rs  errors.rs  groups.rs  mod.rs  pcie.rs
ghostctl/src/monitor/: client.rs  config.rs  mod.rs  parse.rs
ghostctl/src/network/: dns.rs  mesh.rs  mod.rs  netcat.rs  scan.rs
ghostctl/src/networking/: advanced_firewall.rs  advanced_scanner.rs  bridge_management.rs  enterprise_networking.rs  errors.rs  export.rs  fingerprint.rs  firewall.rs  hw_offload.rs  libvirt_advanced.rs  mod.rs  nftables_enterprise.rs  safe_commands.rs  scanner.rs  services.rs  troubleshoot.rs  virtualization.rs
ghostctl/src/nginx/: acme.rs  config.rs  mod.rs  proxy.rs  ssl.rs
ghostctl/src/nix/: configuration.rs  flakes.rs  mod.rs  packages.rs
ghostctl/src/nvidia/: container.rs  dkms.rs  dlss.rs  drivers.rs  errors.rs  mod.rs  optimize.rs  passthrough.rs  source_build.rs  wayland.rs
ghostctl/src/nvim/: diagnostics.rs  mason.rs  mod.rs  plugins.rs  setup.rs
ghostctl/src/obs/: config.rs  detect.rs  mod.rs
ghostctl/src/openshell/: config.rs  mod.rs
ghostctl/src/plugins/: core.rs  manager.rs  mod.rs  runner.rs
ghostctl/src/proxmox/: advanced_security.rs  backup_rotation.rs  enhanced.rs  errors.rs  firewall_automation.rs  helper.rs  mod.rs  pbs.rs  script_safety.rs  sdn.rs  storage_migration.rs  template_management.rs  upgrade.rs  validation.rs  vfio.rs
ghostctl/src/restore/: btrfs.rs  chroot.rs  mod.rs  restic.rs  restorebtrfs.rs  system.rs
ghostctl/src/security/: credential_backends.rs  credentials.rs  gpg.rs  mod.rs  ssh.rs  validation.rs
ghostctl/src/shell/: mod.rs  terminals.rs  zsh.rs
ghostctl/src/sign/: asn1.rs  auth.rs  config.rs  deb.rs  errors.rs  generic.rs  hash.rs  keyvault.rs  mod.rs  pacman.rs  pe.rs  pgp.rs  rpm.rs  timestamp.rs
ghostctl/src/storage/: local.rs  mod.rs  network.rs  s3.rs  s3_simple.rs
ghostctl/src/sysctl/: mod.rs  tui.rs
ghostctl/src/terminal/: alacritty.rs  mod.rs
ghostctl/src/tools/: external.rs  mod.rs
ghostctl/src/uefi/: enroll.rs  mod.rs
ghostctl/src/unifi/: adopt.rs  client.rs  config.rs  (+2 more)
ghostctl/tests/: cli_regressions.rs
(+147 files in other folders)
