[package]
name = "ghostctl"
version = "0.5.1"
edition = "2024"
license = "MIT"
description = "Modular CLI toolkit for Linux sysadmins, homelabbers, and power users."

[dependencies]
clap = { version = "4.5", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
duct = "0.13"
which = "5.0"
dirs = "5.0"
walkdir = "2.4"
anyhow = "1.0"
thiserror = "1.0"
sysinfo = "0.30"
nix = "0.28"
num_cpus = "1.16"
libloading = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
mlua = { version = "0.9", features = ["lua54"] }
dialoguer = "0.11"
reqwest = { version = "0.11", features = ["blocking", "json"] }
chrono = "0.4"