[package]
name = "ghostctl"
version = "0.12.2"
edition = "2024"
license = "MIT"
description = "Modular CLI toolkit for Linux sysadmins, homelabbers, and power users."

[features]
default = []
# Enable libsecret/keyring credential backend (requires D-Bus and GNOME/KDE keyring)
keyring-backend = ["dep:keyring"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.6.7"
log = "0.4"
env_logger = "0.11.11"
duct = "1.1"
which = "8.0"
dirs = "6.0.0"
walkdir = "2.4"
anyhow = "1.0.103"
thiserror = "2.0.18"
sysinfo = "0.39"
nix = "0.31.3"
num_cpus = "1.16"
libloading = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "1.1.2"
mlua = { version = "0.11.6", features = ["lua54"] }
dialoguer = "0.12.0"
reqwest = { version = "0.13", features = ["blocking", "json"] }
chrono = "0.4"
base64 = "0.22.1"
gethostname = "1.1"
ratatui = "0.30"
crossterm = "0.29"
tokio = { version = "1.0", features = ["full"] }
regex = "1.10"
ipnet = "2.9"
indicatif = "0.18.6"
rayon = "1.10"
sha2 = "0.11"
goblin = "0.10"
sha1 = "0.11"
argon2 = "0.5"
getrandom = "0.4.3"
libc = "0.2.179"
futures = "0.3"
tempfile = "3.10"
socket2 = { version = "0.6.4", features = ["all"] }
flate2 = "1.1"
tar = "0.4"

[target.'cfg(target_os = "linux")'.dependencies]
bluer = { version = "0.17", features = ["bluetoothd"] }

# Optional dependencies
# Use linux-keyutils directly (kernel-level) instead of D-Bus secret-service
# This avoids unmaintained zbus transitive dependencies and is more secure
keyring = { version = "2", optional = true, default-features = false, features = ["linux-no-secret-service"] }

[dev-dependencies]
assert_cmd = "2"
